feat: generics added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 ﻿/API/bin/Debug/netcoreapp3.1/appsettings.json
 /API/appsettings.json
 *.db
+/API/bin/
+/API/obj/
+/Core/bin/
+/Core/obj/
+/Infrastructure/bin/
+/Infrastructure/obj/
+/API/elson.db
