--- a/client/angular.json
+++ b/client/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "src/css/tailwind.css",
               "src/styles.scss"
             ],
