--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.1.2",
     "@schematics/angular": "^9.1.0",
     "font-awesome": "^4.7.0",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.0.2",
     "tslib": "^2.0.0",
