--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.0.2",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "xng-breadcrumb": "^6.6.0",
     "zone.js": "~0.11.3"
   },
